# 0xchihiro-fafo

./: .gitignore  Cargo.toml  README.md
docs/hpfile/: hpfile.md
hpfile/: Cargo.toml
hpfile/src/: file.rs  lib.rs
qmdb/: Cargo.toml
qmdb/benches/: qmdb_bench.rs
qmdb/src/: config.rs  lib.rs  metadb.rs
qmdb/src/entryfile/: entry.rs  entrybuffer.rs  entrycache.rs  entryfile.rs  helpers.rs  readbuf.rs
qmdb/src/tasks/: bptaskhub.rs  tasksmanager.rs
qmdb/src/utils/: bytescache.rs  changeset.rs  mpsc.rs  ringchannel.rs  shortlist.rs  slice.rs
