[workspace]

members = ["hpfile","qmdb"]

resolver = "3"

[workspace.dependencies]
aead = "0.5.2"
aes-gcm = "0.10.3"
anyhow = "1.0.102"
atomptr = "3.2.0"
blake2 = "0.10.6"
byteorder = "1.5.0"
bytes = "1.11.1"
criterion = "0.8.2"
crossbeam = "0.8.4"
dashmap = "6.1.0" 
hex = "0.4.3"
hpfile = { path = "hpfile" }
log = "0.4.29"
parking_lot = { version = "0.12.5", features = ["arc_lock"] }
rayon = "1.11.0"
rkyv = { version = "0.8.15", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serial_test = "3.4.0"
smallvec = { version = "1.15.1", features = ["const_generics"] }
sha2 = "0.10.9"
tempfile = "3.26.0"
thiserror = "2.0.18"
