[package]
name = "qmdb"
version = "0.1.0"
edition = "2024"

[dependencies]
aead = { workspace = true}
aes-gcm = { workspace = true }
atomptr = { workspace = true }
blake2 = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
crossbeam = { workspace = true }
dashmap = { workspace = true }
hex = { workspace = true }
hpfile = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
rkyv = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "qmdb_bench"
harness = false

[features]
default = []
check_rec = []
use_hybridindexer = []
check_hybridindexer = []
profiling_hybridindexer = []
tee_cipher = []
slow_hashing = []
